carga de esqueleto funcional

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /Olimpiadas/SistemaSeleccionReina/bin/Debug
+/Olimpiadas/SistemaSeleccionReina/obj/Debug
